Fix freetime search button overlaps delete button in calendar edit

--- a/calendar/templates/default/app.css
+++ b/calendar/templates/default/app.css
@@ -379,7 +379,7 @@ Hide subsequent headers in week view with non-consolidated owners
 	border-right: 1px solid silver;
 	height: initial;
 	min-height: 2em;
-	
+
 	transition: none;
 	z-index:30;
 	white-space: initial;
@@ -1325,3 +1325,5 @@ input#calendar-edit_location {padding-left: 0;}
 	color: #616161;
 	font-weight: 500;
 }
+
+#calendar-edit .dialogFooterToolbar {min-width: 780px;}
